--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,13 @@ code {
 	padding: 50px 40px;	
 }
 
-.player-deck {
-	
+.player-table-cards {
+	margin: 20px;
+}
+
+.player-table-cards__stack {
+	display: inline-block;
+	border: 1px solid;
+	margin: 5px;
+	padding: 50px 40px;
 }
