--- a/src/client/components/Card.css
+++ b/src/client/components/Card.css
@@ -1,6 +1,5 @@
 .card {
   display: inline-block;
-  width: 160px;
   border: 2px solid #f0f0f0;
   border-radius: 10px; 
   font-family: 'Baloo Da 2', cursive;
@@ -8,8 +7,23 @@
   box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.75);
 }
 
+.card--small {
+  width: 100px;
+  font-size: 1.87rem;
+}
+
+.card--regular {
+  width: 130px;
+  font-size: 2.5rem;
+}
+
+.card--large {
+  width: 150px;  
+  font-size: 2.8rem;
+}
+
 .card__outer-edge {
-  padding: 10px;
+  padding: 0.4em;
   border-radius: inherit;
   background: #ffffff;
 }
@@ -22,29 +36,25 @@
 .card__header {
   display: flex;
   justify-content: flex-start;
-  height: 50px;
-  font-size: 3rem;
+  font-size: 100%;
 }
 
 .card__center {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 110px;
-  font-size: 6rem;
+  font-size: 200%;
 }
 
 .card__footer {
   display: flex;
   justify-content: flex-end;
-  height: 50px;
-  font-size: 3rem;
+  font-size: 100%;
 }
 
 .card__value {
-  padding: 0 10px;
+  padding: 0 0.4em;
   color: #ffffff;
-  word-wrap: break-word;
   text-transform: uppercase;
 }
 
@@ -56,28 +66,43 @@
   transform: rotate(-180deg);
 }
 
+
+/* SKIP-BO CARD */
+
+.card--small.card--skipbo {
+  font-size: 0.985rem;
+}
+
+.card--regular.card--skipbo {
+  font-size: 1.2995rem;
+}
+
+.card--large.card--skipbo {
+  font-size: 1.45rem;
+}
+
 .card--skipbo .card__header,
 .card--skipbo .card__center,
 .card--skipbo .card__footer {
   line-height: 1;
 }
 
-.card--skipbo .card__header .card__value,
-.card--skipbo .card__footer .card__value {
-  font-size: 2rem;
-  width: 70px;
+.card--skipbo .card__outer-edge {
+  padding: 0.748em;
 }
 
-.card--skipbo .card__center {
-  font-size: 4rem;
+.card__multiline {
+  display: flex;
+  flex-direction: column;
 }
 
 .card--skipbo .card__center .card__value {
-  width: 100px;
+  margin-top: 0.2em;
+  margin-left: 0.2em;
 }
 
 .card--skipbo .card__value {
-  padding: 10px;
+  padding: 0.6em;
 }
 
 .card--skipbo .card__header .card__value,
