--- a/src/client/components/PlayerTableCards.css
+++ b/src/client/components/PlayerTableCards.css
@@ -1,10 +1,17 @@
 .player-table-cards {
-  margin: 20px;
+  display: flex;
 }
 
 .player-table-cards__stack {
+  width: 104px;
+  height: 144px;
+  margin-right: 10px;
+}
+
+.player-table-cards__stack--empty {
   display: inline-block;
-  border: 1px solid;
+  box-sizing: border-box;
+  border: 2px dashed #b0b0b0;
+  border-radius: 10px;
   margin: 5px;
-  padding: 50px 40px;
 }
