--- a/src/client/components/PlayerTableCards.css
+++ b/src/client/components/PlayerTableCards.css
@@ -3,15 +3,14 @@
 }
 
 .player-table-cards__stack {
-  width: 104px;
-  height: 144px;
   margin-right: 10px;
 }
 
-.player-table-cards__stack--empty {
-  display: inline-block;
-  box-sizing: border-box;
-  border: 2px dashed #b0b0b0;
-  border-radius: 10px;
-  margin: 5px;
+.player-table-cards__stack-cards {
+  position: relative;
+  width: 124px;
+  height: 220px;
+  padding: 10px;
+  overflow: hidden;
 }
+
