--- a/src/client/components/App.css
+++ b/src/client/components/App.css
@@ -1,10 +1,14 @@
 .app {
   display: flex;
-  align-items: stretch;
+  height: 100vh;
+  overflow: hidden;
   background: #efefef;
 }
 
 .app__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 50%;
   padding: 20px;
 }
