--- a/src/client/components/Card.css
+++ b/src/client/components/Card.css
@@ -12,7 +12,7 @@
   font-size: 1.87rem;
 }
 
-.card--regular {
+.card--medium {
   width: 130px;
   font-size: 2.5rem;
 }
@@ -66,6 +66,10 @@
   transform: rotate(-180deg);
 }
 
+.card--selected {
+  border: 4px solid #3598c7;
+  box-sizing: border-box;
+}
 
 /* SKIP-BO CARD */
 
@@ -73,7 +77,7 @@
   font-size: 0.899rem;
 }
 
-.card--regular.card--skipbo {
+.card--medium.card--skipbo {
   font-size: 1.18rem;
 }
 
