--- a/src/client/components/PlayerDeck.css
+++ b/src/client/components/PlayerDeck.css
@@ -14,6 +14,6 @@
   font-size: 2rem;
   border-radius: 50%;
   overflow: hidden;
-  background: #46d9f0;
+  background: #9c27b0;
   color: #ffffff;
 }
